# bapi-dmm

./: Cargo.toml  LICENSE.md  README.md  container_build.sh  run_container.sh
crates/bapi-dmm-reader/: Cargo.toml
crates/bapi-dmm-reader/dm/: bapi_bindings.dm  bapi_dmm_reader.dm  bapi_helpers.dm  compat.dm
crates/bapi-dmm-reader/src/: _compat.rs  arena.rs  grid.rs  helpers.rs  lib.rs  load.rs  load_buffer.rs  parse.rs  random_map.rs
crates/bapi-dmm-reader/src/load/: command_buffer.rs  grid.rs  helpers.rs  load_buffer.rs  smart_byond_value.rs
crates/bapi-dmm-reader/tests/: real_byond_test.rs
crates/bapi-dmm-reader/tests/test_project/: MetaStation-tgm.dmm  load.dmm  meta_paths.dm  old_loader.dm  oob.dmm  prefab.dmm  rotation.dmm  rotation_tgm.dmm  test.dme  test_map.dmm  test_map_tgm.dmm  tests.dm  turf_and_area.dmm
crates/dmm-lite/: Cargo.toml
crates/dmm-lite/benches/: metastation.rs  nadezhda.rs
crates/dmm-lite/src/: block.rs  lib.rs  prefabs.rs
crates/dmm-lite/tests/: handwritten.rs  metastation.rs  nadezhda.rs
crates/dmm-lite/tests/maps/: MetaStation.dmm  handwritten-tgm.dmm  handwritten.dmm  nadezhda.dmm
crates/test-binary/: Cargo.toml  facility.dmm
crates/test-binary/src/: main.rs
