[package]
name = "dmm-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
regex = "1.10.5"
winnow = "0.6.13"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "metastation"
harness = false

[[bench]]
name = "nadezhda"
harness = false